--- a/shyam_utkarsha_about_us.html
+++ b/shyam_utkarsha_about_us.html
@@ -18,10 +18,20 @@
 <body>
 
 <div class="jumbotron text-center">
-  <h1>About Us</h1> 
-  <p style="padding:20px; text-align:left;" >Our comprehensive financial planning services are perfect for those looking for clarity, organization and education in their financial life. Your plan will help you identify your values, get clear on your goals, identify gaps, build a framework for success, and ensure that you have an accountability partner to keep you on track to a meaningful financial future.
-  <br>
-Whether it’s saving for retirement, managing your investments, planning for your career, stashing away for your kid’s education, or having a clearer picture of how to integrate your business and personal finances to make your life work, we’ve got you covered.
+  <h1>WHAT WE DO?</h1> 
+  <p style="padding:20px; text-align:left;" >We help successful salaried Indian professionals worldwide grow their personal wealth to over 40 times their annual expenses by investing smartly, so that they can build lasting wealth for themselves and their families and be financially free to do what matters most to them; without having to spend too much time tracking their investments or dealing with product sellers.
+</p> 
+ <h1>HOW WE DO IT?</h1> 
+  <p style="padding:20px; text-align:left;" >Through a well-researched process of life planning and comprehensive financial planning, We help our clients navigate through their own beliefs and relationships with money and set for themselves inspiring goals. We then chart out a detailed plan of action to get to these goals. We also help our clients to implement the plan and handhold them through the choppy journey of risk management, debt management, investing and succession planning till they reach their goals.
+</p> 
+ <h1>WHY DOES IT WORK?</h1> 
+  <p style="padding:20px; text-align:left;" >Money is less about investing and more about behaviors. By focusing on the goals, beliefs, habits and all things controllable, our clients get into the investing world with open eyes and an open mind. With periodic interventions our clients know what is happening with their money and why it is happening. It gives them the courage to stick to plans - which eventually works.
+</p> 
+ <h1>WHO DO WE HELP?</h1> 
+  <p style="padding:20px; text-align:left;" >We help salaried Indian professionals at various stages of their career - they could be just starting off, going through mid-career crisis or getting closer to retirement. Our customized service for each of these client categories gives them exactly what they need.
+</p> 
+ <h1>WHAT WE DO?</h1> 
+  <p style="padding:20px; text-align:left;" >We help successful salaried Indian professionals worldwide grow their personal wealth to over 40 times their annual expenses by investing smartly, so that they can build lasting wealth for themselves and their families and be financially free to do what matters most to them; without having to spend too much time tracking their investments or dealing with product sellers.
 </p> 
 </div>
 <div id="products" class="jumbotron text-left" >
