--- a/ravi_pooja_invitation.html
+++ b/ravi_pooja_invitation.html
@@ -11,7 +11,7 @@
 <body>
 <!--https://www.w3schools.com/howto/howto_css_profile_card.asp-->
 
-<div class="card" >
+<div class="ravi_pooja_card" >
   <!--<img src="/w3images/team2.jpg" alt="John" style="width:100%">-->
   <!--<img src="/assets/images/background.jpg" alt="" class="" style="width:100%">-->
   <!--countdown location calender whatsapp call message fb link for bride and groom-->
