--- a/ravi_pooja_invitation.html
+++ b/ravi_pooja_invitation.html
@@ -29,7 +29,7 @@
   <section>
   <h1 style="color:#72c1ff; font-family: 'Tangerine', serif; font-size: 48px; margin-bottom:10px;margin-top:100px;" >Location</h1>
    <div style="margin: 24px 0;">
-    <a href="https://www.justdial.com/Gingee/Devika-Marriage-Hall-Gingee-Bazaar/9999P4145-4145-140219144510-A5D3_BZDET" style="color:yellow;"><i  style="color:yellow;" class="fa fa-location-arrow"></i>&nbsp;&nbsp;Click for Directions</a>
+    <a href="https://g.co/kgs/2PBxzP" style="color:yellow;"><i  style="color:yellow;" class="fa fa-location-arrow"></i>&nbsp;&nbsp;Click for Directions</a>
   </div>
   </section>
    <section>
