--- a/vignesh_praveena_engagement_invitation.html
+++ b/vignesh_praveena_engagement_invitation.html
@@ -23,7 +23,7 @@
   <section>
   <h1 style="color:#72c1ff; font-family: 'Tangerine', serif; font-size: 48px; margin-bottom:10px;margin-top:10px;" >Calendar</h1>
   <div style="margin: 24px 0;">
-    <a  style="color:yellow;" target="blank"  href="https://www.google.com/calendar/render?action=TEMPLATE&text=Vignesh+Praveena+Engagement&details=We+welcome+you+for+our+Engagement&location=Hotel+Chennai+Le+Palace+5%2F9%2C+Arcot+Road%2C+Karambakkam%2C+(Near+Porur+Signal)+Porur%2C+Chennai+-+116.&dates=20201029T183000Z%2F20201030T060000Z"><i  style="color:yellow;" class="fa fa-calendar"></i>&nbsp;&nbsp;Save the Date</a>
+    <a  style="color:yellow;" target="blank"  href="https://www.google.com/calendar/render?action=TEMPLATE&text=Vignesh+Praveena+Engagement&details=We+welcome+you+for+our+Engagement&location=Hotel+Chennai+Le+Palace+5%2F9%2C+Arcot+Road%2C+Karambakkam%2C+(Near+Porur+Signal)+Porur%2C+Chennai+-+116.&dates=20201030T183000Z%2F20201030T193000Z"><i  style="color:yellow;" class="fa fa-calendar"></i>&nbsp;&nbsp;Save the Date</a>
   </div>
   </section>
   <section>
@@ -32,12 +32,12 @@
     <a target="blank"  href="https://goo.gl/maps/7VabwWuxtnRGQrQS9" style="color:yellow;"><i  style="color:yellow;" class="fa fa-location-arrow"></i>&nbsp;&nbsp;Click for Directions</a>
   </div>
   </section>
-   <section>
+  <!-- <section>
   <h1 style="color:#72c1ff; font-family: 'Tangerine', serif; font-size: 48px; margin-bottom:10px;margin-top:30px;" >I am coming</h1>
   <div style="margin: 24px 0;">
     <a  target="blank"  style="color:yellow;" href="https://wa.link/49rjxb"><i  style="color:yellow;" class="fa fa-whatsapp"></i>&nbsp;&nbsp;Click to confirm</a>
   </div>
-  </section>
+  </section> -->
   
  <!-- <p class="title">CEO & Founder, Example</p>
   <p>Harvard University</p>
