--- a/vignesh_nisha_invitation.html
+++ b/vignesh_nisha_invitation.html
@@ -22,7 +22,7 @@
 ">
   <h1 style="color:#72c1ff;font-family: 'Tangerine', serif;font-size: 48px;margin-bottom:10px;margin-top: 10px;">Calendar</h1>
   <div style="margin: 24px 0;">
-    <a style="color:yellow;" target="blank" href="https://calendar.google.com/calendar/r/eventedit?dates=20210425T103000Z/20210425T113000Z&text=Vignesh+PR+Nisha+Marriage&location=Kootalumoodu+Arulmigu+Bhadreswari+Amman+Thirumana+Mandapam&details&sf=true"><i style="color:yellow;" class="fa fa-calendar"></i>&nbsp;&nbsp;Save the Date</a>
+    <a style="color:yellow;" target="blank" href="https://calendar.google.com/calendar/r/eventedit?dates=20210425T103000Z/20210425T113000Z&text=Vignesh+PR+Nisha+Marriage&location=Nartamizh+Kalyana+Mandapam&details&sf=true"><i style="color:yellow;" class="fa fa-calendar"></i>&nbsp;&nbsp;Save the Date</a>
   </div>
   </section>
   <section style="
@@ -30,7 +30,7 @@
 ">
   <h1 style="color:#72c1ff;font-family: 'Tangerine', serif;font-size: 48px;margin-bottom:10px;margin-top: 10px;">Location</h1>
    <div style="/* margin: 24px 0; */">
-    <a target="blank" href="https://goo.gl/maps/3mUThfDJZhVoQN5j7" style="color:yellow;"><i style="color:yellow;" class="fa fa-location-arrow"></i>&nbsp;&nbsp;Click for Directions</a>
+    <a target="blank" href="https://g.co/kgs/WaAmfc" style="color:yellow;"><i style="color:yellow;" class="fa fa-location-arrow"></i>&nbsp;&nbsp;Click for Directions</a>
   </div>
   </section>
    <section>
