--- a/editExtraCard.html
+++ b/editExtraCard.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-   <head>
+   <head><meta http-equiv="refresh" content="0; URL='https://wishmecards.com/renew.html'" />
       <meta charset="utf-8">
       <title>Wishmecards</title>
       <!-- Mobile Specific Metas -->
