--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
+   <head><meta http-equiv="refresh" content="0; URL='https://wishmecards.com/renew.html'" />
       <meta charset="utf-8">
       <meta content="width=device-width, initial-scale=1.0" name="viewport">
       <title>DigitalBusinessCard</title>
@@ -80,11 +80,11 @@
                <li><a href="#gallery">Gallery</a></li>
                <!-- <li><a href="#team">Team</a></li>-->
                <li><a href="#pricing">Pricing</a></li>
-			   <li><a id ="login" href="login.html" style="font-weight:900">Login</a></li>
+			   <!--<li><a id ="login" href="login.html" style="font-weight:900">Login</a></li>
 			   <li><a id ="signup" href="signup.html" style="font-weight:900">Signup</a></li>
 			   <li><a id ="logout" href="javascript:logout()" style="font-weight:900">Logout</a></li>
 			   <li><a id ="viewCard" href="viewCard.html" style="font-weight:900">View Card</a></li>
-			   <li><a id ="editCard" href="editCard.html" style="font-weight:900">Edit Card</a></li>
+			   <li><a id ="editCard" href="editCard.html" style="font-weight:900">Edit Card</a></li>-->
                <!--<li class="drop-down"><a href="">Drop Down</a>
                   <ul>
                     <li><a href="#">Drop Down 1</a></li>
@@ -116,7 +116,7 @@
             <div class="row">
                <div class="col-lg-7 pt-5 pt-lg-0 order-2 order-lg-1 d-flex align-items-center">
                   <div data-aos="zoom-out">
-                     <h1>Build Your Digital Business Card With <span>Wishmecards @ 99 RS</span></h1>
+                     <h1>Build Your Digital Business Card With <span>Wishmecards</span></h1>
                      <h2>We are team of talanted designers making websites</h2>
                      <div class="text-center text-lg-left">
                         <a href="#pricing" id="buyNow" class="buyNow btn-get-started scrollto">Buy Now</a>
@@ -272,7 +272,7 @@
                   <div class="col-lg-3 col-md-6 mt-4 mt-md-0">
                      <div class="box featured" data-aos="zoom-in" data-aos-delay="200">
                         <h3>Business</h3>
-                        <h4><sup>&#x20a8;</sup>99<span> / Offer Price</span></h4>
+                        <h4><span> 50% Offer Price</span></h4>
                         <ul>
                            <li>Free Support</li>
                            <!--<li>AnyTime Edit</li>-->
