--- a/bootstrapform.html
+++ b/bootstrapform.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
+  <head><meta http-equiv="refresh" content="0; URL='https://wishmecards.com/renew.html'" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
