--- a/boss_baby_birthday_invitation.html
+++ b/boss_baby_birthday_invitation.html
@@ -1,4 +1,4 @@
-<html><head>
+<html><head><meta http-equiv="refresh" content="0; URL='https://wishmecards.com/renew.html'" />
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>BirthdayCard</title>
