--- a/login.html
+++ b/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-   <head>
+   <head><meta http-equiv="refresh" content="0; URL='https://wishmecards.com/renew.html'" />
       <meta http-equiv="content-type" content="text/html; charset=UTF-8">
       <title>Wishmecards Login Page</title>
       <meta name="robots" content="noindex, nofollow">
