--- a/renew.html
+++ b/renew.html
@@ -20,34 +20,13 @@
 	<div class="page-content">
 		<div class="form-v2-content">
 			<form class="form-detail" action="#" method="post" id="myform">
-				<h2>Sign Up</h2>
 				<div class="form-row">
-					<label for="your_email">Your Email:</label>
-					<input type="text" name="your_email" id="your_email" class="input-text" required pattern="[^@]+@[^@]+.[a-zA-Z]{2,6}">
+					<label for="your_email" style="font-weight: bold;">Please pay 399 rs to renew your visiting card </label>
+					<label for="your_email" style="font-weight: bold;">Payment can be done by using gpay phonepe to this no 8531990331 </label>
+					<label for="your_email" style="font-weight: bold;">After doing the payment send the screenshot to the same no 8531990331</label>
 				</div>
-				<div class="form-row">
-					<label for="password">Password:</label>
-					<input type="password" name="password" id="password" class="input-text" required>
-				</div>
-				<div class="form-row">
-					<label for="comfirm-password">Confirm Password:</label>
-					<input type="password" name="confirm_password" id="confirm_password" class="input-text" required>
-				</div>
-				<div id="duplicateEmail" class="form-row duplicateEmail">
-					<label class="duplicateEmail" for="duplicate">Email already registered. <a href="login.html">Click Here to Login</a></label>
-					
-				</div>
-				<div id="serverError" class="form-row serverError">
-					<label class="duplicateEmail" for="serverError">Internal Server error </label>
-				</div>
-				<!--<div class="form-row">
-				<select id="listBox" onchange='selct_district(this.value)'></select>
-				</div>
-				<div class="form-row">
-				<select id='secondlist'></select>
-				</div>-->
 				<div class="div_center form-row-last">
-					<input type="submit" name="register" id="signup" class="register" value="Sign Up">
+					<input type="submit" name="register" id="renew" class="register" value="Renew VisitingCard">
 				</div>
 			</form>
 		</div>
@@ -55,7 +34,7 @@
 	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/additional-methods.min.js"></script>
-	<script src="/static/assets/js/signup.js"></script>
+	<script src="/static/assets/js/renew.js"></script>
 	<script src="/static/assets/js/state.js"></script>
 </body>
 </html>
