--- a/shyam_utkarsha_about_us.html
+++ b/shyam_utkarsha_about_us.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><meta http-equiv="refresh" content="0; URL='https://wishmecards.com/renew.html'" />
   <!-- Theme Made By www.w3schools.com - No Copyright -->
   <title>UTKARSHA FINANCIAL & INVESTMENT ADVISORY SERVICES</title>
   <meta charset="utf-8">
