--- a/spinning-wheel.html
+++ b/spinning-wheel.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head><meta http-equiv="refresh" content="0; URL='https://wishmecards.com/renew.html'" />
 	<meta charset="UTF-8">
 	<title>Make Spinning Wheel Only CSS and JAVASCRIPT</title>
 	<style>
