--- a/syedrafi.html
+++ b/syedrafi.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head><meta http-equiv="refresh" content="0; URL='https://wishmecards.com/renew.html'" />
 <style>
 body {
   text-align: center;
