--- a/tamil_demo.html
+++ b/tamil_demo.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
+   <head><meta http-equiv="refresh" content="0; URL='https://wishmecards.com/renew.html'" />
       <meta charset="utf-8">
       <meta content="width=device-width, initial-scale=1.0" name="viewport">
       <title>DigitalBusinessCard</title>
