--- a/muthu_saradha_invitation.html
+++ b/muthu_saradha_invitation.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><meta http-equiv="refresh" content="0; URL='https://wishmecards.com/renew.html'" />
+<head><meta http-equiv="refresh" content="0; />
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link href= 'https://fonts.googleapis.com/css?family=Sofia|Baloo|Roboto|Tangerine' rel='stylesheet' />
